[project]
    name = "runbook-app"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
    requires-python = ">=3.12"
    dependencies = ["beautifulsoup4==4.12.3", "together>=1.3.5"]

    [project.scripts]
        runbook = "runbook_app:main"

[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[dependency-groups]
    dev = ["pytest>=8.3.3", "reflex>=0.6.6.post2"]

[tool.ruff]
    line-length = 120
