[project]
    name = "runbook-app"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
    requires-python = ">=3.12"
    dependencies = [
    "beautifulsoup4==4.12.3",
    "reflex>=0.6.6",
    "together>=1.3.5",
]

    [project.scripts]
        runbook = "runbook:main"

[tool.ruff]
    line-length = 120
